syntax = "proto3";

package file.v1;

option go_package = "connect-rpc-tutorial/gen/file/v1;filev1";

message ListFilesRequest {};
message ListFilesResponse {
    repeated string filenames = 1;
};

message DownloadRequest {
    string filenames = 1;
};
message DownloadResponse {
    bytes data = 1;
};

service FileService {
    // Unary RPC定義
    rpc ListFiles (ListFilesRequest) returns (ListFilesResponse);
    // Server Streaming RPC定義
    rpc Download (DownloadRequest) returns (stream DownloadResponse);
};
